# KivotOS

./: CMakeLists.txt  start_debug.sh  syms.sh
KivotOS/: .gitignore  gdbinit  iso.sh  limine.conf  start.sh  start_debug.sh
KivotOS/apps/HelloWorld/: main.c
KivotOS/src/acpi/: acpi.c  acpi.h  uacpi_io.c
KivotOS/src/elf/: elf.c
KivotOS/src/init/: early.c  init.asm
KivotOS/src/mem/: dlmalloc.c  gheap.c  gheap.h
KivotOS/src/rt/: instrumenting.c  instrumenting.h  math.c  mutex.c  mutex.h  string.c
KivotOS/src/sched/: sched.h  tls.c  tls.h
KivotOS/src/syscalls/: syscall_system.c  syscall_system.h
KivotOS/src/x86/: apic.h  exception_handlers.asm  idt.c  load_tss.asm  msr.h
apps/HelloWorld/: compile.sh  main  main.asm  main.c
src/: limine.h
src/acpi/: acpi.c  uacpi_glue.c  uacpi_io.h
src/elf/: elf.c  elf.h
src/init/: early.c  init.asm
src/mem/: dlmalloc.h  gheap.c  physical.c  physical.h  virtual.c  virtual.h
src/rt/: errno.c  kallsyms.c  kallsyms.h  memory.c  mutex.c  printf.c  string.c  ubsan.c
src/sched/: sched.c  sched.h  tls.c  tls.h
src/syscalls/: syscall_handler.asm  syscalls.h
src/syscalls/syscalls/: write.c
src/vfs/: vfs.c  vfs.h
src/x86/: apic.c  exception_handlers.asm  gdt.c  gdt.h  idt.c  idt.h  interrupts_helpers.h  io.h  load_gdt.asm  load_idt.asm  load_tss.asm  log.c  log.h
